# backup

./: .gitignore
Hackathons/Hakaccino4/NaviX/: .gitignore  README.md  demo_schedule.xlsx  demo_schedule_deepwater_westAfrica.xlsx  demo_schedule_onshore_SEAsia.xlsx  pyproject.toml  start.sh  start_prod.sh
Hackathons/Hakaccino4/NaviX/backend/: config.py  database.py  main.py  models.py  requirements.txt
Hackathons/Hakaccino4/NaviX/backend/agents/: assistant_agent.py  base_agent.py  logistics_risk_agent.py  orchestrator.py  political_risk_agent.py  reporting_agent.py  scheduler_agent.py  tariff_risk_agent.py
Hackathons/Hakaccino4/NaviX/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
Hackathons/Hakaccino4/NaviX/frontend/app/: globals.css  page.tsx
Hackathons/Hakaccino4/NaviX/frontend/app/api/chat/: route.ts
Hackathons/Hakaccino4/NaviX/frontend/app/api/heatmap/: route.ts
Hackathons/Hakaccino4/NaviX/frontend/app/api/thinking-logs/: route.ts
Hackathons/Hakaccino4/NaviX/frontend/app/api/upload-schedule/: route.ts
Hackathons/Hakaccino4/NaviX/frontend/app/chat/: MapChart.tsx  chat-session-sidebar.tsx  markdown-styles.module.css  page.tsx
Hackathons/Hakaccino4/NaviX/frontend/app/dashboard/: MapChart.tsx
Hackathons/Hakaccino4/NaviX/frontend/app/reports/: columns.tsx  data-table.tsx
Hackathons/Hakaccino4/NaviX/frontend/app/thinking-logs/: columns.tsx  data-table.tsx  page.tsx
Hackathons/Hakaccino4/NaviX/frontend/components/: site-header.tsx
Hackathons/Hakaccino4/NaviX/scripts/: dev.sh  stop.sh
MyPortfolio/: .gitmodules  (+6 more)
(+1132 files in other folders)
