[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
